--- a/package.json
+++ b/package.json
@@ -11,13 +11,18 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
     "node-gyp": "^7.0.0",
     "nodemon": "^2.0.4",
     "ol": "^6.3.1",
     "path": "^0.12.7",
+    "pg": "^8.2.1",
+    "pg-hstore": "^2.3.3",
+    "postgresql": "0.0.1",
     "rticonnextdds-connector": "^1.0.0",
+    "sequelize": "^6.2.3",
     "sleep": "^6.2.0",
     "socket.io": "^2.3.0"
   },
